kubernetes/apps/flux-system/webhooks/app/github/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames: ["flux-webhook.${SECRET_DOMAIN}"]
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
